flow_apps/webhook2flow/force-app/main/default/objects/LogService__c/LogService__c.object-meta.xml
<CustomObject>
    <description>Custom Apex Logs</description>
    <label>Log</label>
    <nameField>
        <displayFormat>LOG{0000000000}</displayFormat>
        <label>Log Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>