flow_apps/webhook2flow/force-app/main/default/objects/LogService__c/fields/CallDuration__c.field-meta.xml
<CustomField>
    <fullName>CallDuration__c</fullName>
    <description>The time in Mili-Seconds to process the call in the Salesforce platform</description>
    <inlineHelpText>Use this field to indicate how much time it takes to process the call</inlineHelpText>
    <label>Call Duration (ms)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>