flow_apps/webhook2flow/force-app/main/default/objects/LogService__c/fields/ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessage__c</fullName>
    <description>This field will populated if there are any exceptions</description>
    <inlineHelpText>Use this field to indicate if there is any error message encountered</inlineHelpText>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>