flow_apps/webhook2flow/force-app/main/default/objects/LogService__c/fields/fLastMod__c.field-meta.xml
<CustomField>
    <fullName>fLastMod__c</fullName>
    <formula>LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LastMod</label>
    <type>DateTime</type>
</CustomField>