flow_apps/webhook2flow/force-app/main/default/objects/LogService__c/fields/Host__c.field-meta.xml
<CustomField>
    <fullName>Host__c</fullName>
    <description>Endpoint HOST</description>
    <inlineHelpText>Endpoint HOST</inlineHelpText>
    <label>HOST</label>
    <length>255</length>
    <type>Text</type>
</CustomField>