flow_apps/webhook2flow/force-app/main/default/objects/LogService__c/fields/HttpMethod__c.field-meta.xml
<CustomField>
    <fullName>HttpMethod__c</fullName>
    <description>This field will populated the  Rest API call methods (POST, PUT, DELETE .etc)</description>
    <inlineHelpText>Use this field to indicate the Rest API Call Method(POST, PUT, DELETE .etc)</inlineHelpText>
    <label>HTTP Method</label>
    <length>50</length>
    <type>Text</type>
</CustomField>