flow_apps/webhook2flow/force-app/main/default/objects/LogService__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Message max:255 chars</description>
    <label>Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>