flow_apps/webhook2flow/force-app/main/default/objects/LogService__c/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <description>Request Payload
Error: Class.Method Params</description>
    <inlineHelpText>Request Payload
Error: Class.Method Params</inlineHelpText>
    <label>Request</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>