flow_apps/webhook2flow/force-app/main/default/objects/LogService__c/fields/RequestHeaders__c.field-meta.xml
<CustomField>
    <fullName>RequestHeaders__c</fullName>
    <description>Request Header from API call.</description>
    <inlineHelpText>Use this field to show the request header</inlineHelpText>
    <label>Request Headers</label>
    <length>16000</length>
    <type>LongTextArea</type>
</CustomField>