flow_apps/webhook2flow/force-app/main/default/objects/LogService__c/fields/RequestURI__c.field-meta.xml
<CustomField>
    <fullName>RequestURI__c</fullName>
    <description>This field will be populated with request URI while calling the  Rest API call</description>
    <inlineHelpText>Use this field to show the request URL</inlineHelpText>
    <label>Request URI</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>