flow_apps/webhook2flow/force-app/main/default/objects/LogService__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <description>Callout: Endpoint Reponse
Error:  Thrown Error</description>
    <inlineHelpText>Callout: Endpoint Reponse
Error:  Thrown Error</inlineHelpText>
    <label>Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>