flow_apps/webhook2flow/force-app/main/default/objects/LogService__c/fields/ResponseHeaders__c.field-meta.xml
<CustomField>
    <fullName>ResponseHeaders__c</fullName>
    <description>Response Header from API call.</description>
    <inlineHelpText>Use this field to show the response header</inlineHelpText>
    <label>Response Headers</label>
    <length>16000</length>
    <type>LongTextArea</type>
</CustomField>