flow_apps/webhook2flow/force-app/main/default/objects/LogService__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Callout: Endpoint
Error: class/method</description>
    <inlineHelpText>Callout: Endpoint
Error: class/method</inlineHelpText>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>