flow_apps/webhook2flow/force-app/main/default/objects/LogService__c/fields/StatusCode__c.field-meta.xml
<CustomField>
    <fullName>StatusCode__c</fullName>
    <description>This field will be populated with status code (Success -200, failure 500 ..etc)  while calling the  Rest API call</description>
    <inlineHelpText>Use this field to indicate the status code  (Success -200, failure 500 ..etc)</inlineHelpText>
    <label>Status Code</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>