flow_apps/webhook2flow/force-app/main/default/objects/LogService__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Source__c</columns>
    <columns>fLastMod__c</columns>
    <columns>Host__c</columns>
    <columns>Request__c</columns>
    <columns>Response__c</columns>
    <columns>Type__c</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>Severity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>