flow_apps/webhook2flow/force-app/main/default/objects/LogService__c/listViews/MAllErrors.listView-meta.xml
<ListView>
    <fullName>MAllErrors</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Source__c</columns>
    <columns>fLastMod__c</columns>
    <columns>Request__c</columns>
    <columns>Response__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Exception</value>
    </filters>
    <label>AllErrors</label>
</ListView>